covers for articles

--- a/src/handbook.html
+++ b/src/handbook.html
@@ -23,7 +23,11 @@
             </p>
           </div>
         </div>
-        <img class="Q_PageCover" src="./images/handbookCover.webp" alt="" />
+        <img
+          class="Q_PageCover"
+          src="./images/handbook/handbookCoverMain.webp"
+          alt=""
+        />
         <!-- TabsHere -->
         <div class="C_Tabs">
           <button class="A_Tab">
