--- a/src/handbook/part_1/part_1.html
+++ b/src/handbook/part_1/part_1.html
@@ -18,8 +18,6 @@
             <a class="caption-caps" href="../../../handbook.html">
               Знакомство с веб-плакатом
             </a>
-            •
-            <span class="caption-caps"> {article.name} </span>
           </div>
         </nav>
       </div>
@@ -28,7 +26,7 @@
       <div class="M_HeadingContainer">
         <p class="subtitle light">I Часть</p>
 
-        <h2>Введение <br />в веб-плакат</h2>
+        <h2>Знакомство <br />с веб-плакатом</h2>
         <div class="A_IconText">
           <img
             src="../../images/icons/Q_TimeWhite-24.svg"
@@ -39,6 +37,11 @@
           <p class="subtitle light">39 минут</p>
         </div>
       </div>
+      <img
+        src="../../images/handbook/1partCoverDesktop.webp"
+        alt=""
+        class="part-cover"
+      />
     </div>
 
     <!-- PageContainer -->
@@ -68,12 +71,15 @@
               href="../part_1/chapter_1/about_webposter.html"
             >
               <div class="Q_ArticleImage">
-                <img src="../../images/placeholder.png" alt="" />
+                <img
+                  src="../../images/handbook/covers/handbook_1-1-1.png"
+                  alt=""
+                />
               </div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Что такое веб-плакат</h4>
+                  <h4>Особенности формата</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -83,11 +89,16 @@
             </a>
             <!-- SecondArticle -->
             <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
+              <div class="Q_ArticleImage">
+                <img
+                  src="../../images/handbook/covers/handbook_1-1-2.png"
+                  alt=""
+                />
+              </div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Article name</h4>
+                  <h4>Отличие от классического плаката</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -97,11 +108,16 @@
             </a>
             <!-- Third Article -->
             <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
+              <div class="Q_ArticleImage">
+                <img
+                  src="../../images/handbook/covers/handbook_1-1-3.png"
+                  alt=""
+                />
+              </div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Article name</h4>
+                  <h4>Отличие от лендинга и сайта</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -111,11 +127,16 @@
             </a>
             <!-- FourthArticle -->
             <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
+              <div class="Q_ArticleImage">
+                <img
+                  src="../../images/handbook/covers/handbook_1-1-4.png"
+                  alt=""
+                />
+              </div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Article name</h4>
+                  <h4>Статичный и динамичный веб-плакат</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -128,20 +149,22 @@
         <!-- Second Chapter -->
         <div class="S_Chapter">
           <div class="M_ChapterHeading">
-            <h4>1.1 Что такое веб-плакат</h4>
+            <h4>1.2 Зачем делать веб-плакат</h4>
             <p class="subtitle light">Теория · 4 статьи</p>
           </div>
-          <!-- First chapter -->
           <div class="C_Articles handbook">
             <!-- First Article -->
             <a class="O_CardArticle" href="about_webposter.html">
               <div class="Q_ArticleImage">
-                <img src="../../images/placeholder.png" alt="" />
+                <img
+                  src="../../images/handbook/covers/handbook_1-2-1.png"
+                  alt=""
+                />
               </div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Что такое веб-плакат</h4>
+                  <h4>Зачем создавать веб-плакат</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -151,39 +174,16 @@
             </a>
             <!-- SecondArticle -->
             <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
-              <div class="M_ArticleCardBio">
-                <p class="caption-caps">Теория · 5 минут</p>
-                <div class="M_AboutArticle">
-                  <h4>Article name</h4>
-                  <p class="body">
-                    Article bio about web-poster in a short way described with a
-                    few words
-                  </p>
-                </div>
+              <div class="Q_ArticleImage">
+                <img
+                  src="../../images/handbook/covers/handbook_1-2-2.png"
+                  alt=""
+                />
               </div>
-            </a>
-            <!-- Third Article -->
-            <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Article name</h4>
-                  <p class="body">
-                    Article bio about web-poster in a short way described with a
-                    few words
-                  </p>
-                </div>
-              </div>
-            </a>
-            <!-- FourthArticle -->
-            <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
-              <div class="M_ArticleCardBio">
-                <p class="caption-caps">Теория · 5 минут</p>
-                <div class="M_AboutArticle">
-                  <h4>Article name</h4>
+                  <h4>Во что можно развивать веб-плакат</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -196,7 +196,7 @@
         <!-- Third chapter -->
         <div class="S_Chapter">
           <div class="M_ChapterHeading">
-            <h4>1.1 Что такое веб-плакат</h4>
+            <h4>1.3 Примеры и насмотренность</h4>
             <p class="subtitle light">Теория · 4 статьи</p>
           </div>
           <!-- First chapter -->
@@ -204,12 +204,15 @@
             <!-- First Article -->
             <a class="O_CardArticle" href="about_webposter.html">
               <div class="Q_ArticleImage">
-                <img src="../../images/placeholder.png" alt="" />
+                <img
+                  src="../../images/handbook/covers/handbook_1-3-1.png"
+                  alt=""
+                />
               </div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Что такое веб-плакат</h4>
+                  <h4>Избранные веб-плакаты 2020-2025</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
@@ -219,25 +222,16 @@
             </a>
             <!-- SecondArticle -->
             <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
-              <div class="M_ArticleCardBio">
-                <p class="caption-caps">Теория · 5 минут</p>
-                <div class="M_AboutArticle">
-                  <h4>Article name</h4>
-                  <p class="body">
-                    Article bio about web-poster in a short way described with a
-                    few words
-                  </p>
-                </div>
+              <div class="Q_ArticleImage">
+                <img
+                  src="../../images/handbook/covers/handbook_1-3-2.png"
+                  alt=""
+                />
               </div>
-            </a>
-            <!-- Third Article -->
-            <a class="O_CardArticle" href="">
-              <div class="Q_ArticleImage"></div>
               <div class="M_ArticleCardBio">
                 <p class="caption-caps">Теория · 5 минут</p>
                 <div class="M_AboutArticle">
-                  <h4>Article name</h4>
+                  <h4>Как пользоваться каталогом</h4>
                   <p class="body">
                     Article bio about web-poster in a short way described with a
                     few words
