homepage styles and code tabs

--- a/src/handbook/part_1/part_1.html
+++ b/src/handbook/part_1/part_1.html
@@ -13,6 +13,8 @@
         <button class="A_NavigationMenuButton"></button>
         <nav class="M_Breadcrumbs">
           <div class="W_BreadCrumbsContainer">
+            <a class="caption-caps" href="../../../index.html"> Главная </a>
+            •
             <a class="caption-caps" href="../../../handbook.html"> Учебник </a>
             •
             <a class="caption-caps" href="../../../handbook.html">
@@ -22,23 +24,25 @@
         </nav>
       </div>
     </div>
-    <div class="O_PartCover margin-container">
-      <div class="M_HeadingContainer">
-        <p class="subtitle light">I Часть</p>
+    <div class="O_PartCover">
+      <div class="W_PartCover margin-container">
+        <div class="M_HeadingContainer">
+          <p class="subtitle light">I Часть</p>
 
-        <h2>Знакомство <br />с веб-плакатом</h2>
-        <div class="A_IconText">
-          <img
-            src="../../images/icons/Q_TimeWhite-24.svg"
-            alt="Q_Time"
-            width="24"
-            height="24"
-          />
-          <p class="subtitle light">39 минут</p>
+          <h2>Знакомство <br />с веб-плакатом</h2>
+          <div class="A_IconText">
+            <img
+              src="../../images/icons/Q_TimeWhite-24.svg"
+              alt="Q_Time"
+              width="24"
+              height="24"
+            />
+            <p class="subtitle light">39 минут</p>
+          </div>
         </div>
       </div>
       <img
-        src="../../images/handbook/1partCoverDesktop.webp"
+        src="../../images/handbook/1partCoverDeskop.webp"
         alt=""
         class="part-cover"
       />
@@ -138,8 +142,8 @@
                 <div class="M_AboutArticle">
                   <h4>Статичный и динамичный веб-плакат</h4>
                   <p class="body">
-                    Article bio about web-poster in a short way described with a
-                    few words
+                    Два типа веб-плакатов по&nbsp;уровню интерактивности. Какие
+                    задачи решает каждый и&nbsp;какой выбрать.
                   </p>
                 </div>
               </div>
