--- a/src/index.html
+++ b/src/index.html
@@ -86,8 +86,19 @@
         <div class="O_TitleSlider">
           <div class="M_HeadingContainer">
             <h2>Методика обучения прямиком из&nbsp;HSE ART AND DESIGN*</h2>
-            <div class="A_IconText">
-              <p class="subtitle light">7 лет практики · 300+ проектов</p>
+            <div class="W_Stats">
+              <div class="M_Stat">
+                <h4>7</h4>
+                <p class="body bold">Лет формату</p>
+              </div>
+              <div class="M_Stat">
+                <h4>300+</h4>
+                <p class="body bold">Уникальных работ</p>
+              </div>
+              <div class="M_Stat">
+                <h4>∞</h4>
+                <p class="body bold">Веселья с кодом</p>
+              </div>
             </div>
           </div>
           <div class="fade-container"></div>
@@ -241,45 +252,114 @@
         </div>
       </div>
       <!-- Modules block -->
+
       <div class="S_Modules">
-        <div class="O_ModulesBlock">
+        <div class="O_SquaredBlock">
+          <div class="Q_HandleSquare lt"></div>
+          <div class="Q_HandleSquare rt"></div>
+          <div class="Q_HandleSquare rb"></div>
+          <div class="Q_HandleSquare lb"></div>
           <div class="M_HeadingContainer">
-            <h2>Не пиши весь код сам — воспользуйся готовым</h2>
+            <h2>Не пишите весь код сам — воспользуйся готовым</h2>
             <div class="M_ParagraphButton">
               <p class="subtitle light">
-                Библиотека готовых CSS и JavaScript решений для тебя и твоего
-                проекта. Анимации, эффекты скролла, drag-and-drop.
+                Готовые решения с&nbsp;визуальными демонстрациями и&nbsp;кодом,
+                который можно разобрать и&nbsp;адаптировать под свой проект.
               </p>
-              <a href="modules.html" class="A_Button">Перейти в модули</a>
+            </div>
+          </div>
+          <a href="modules.html" class="A_Button small"
+            >Перейти в модули
+            <img src="./images/icons/Q_ArrowForward-24.svg" alt="" />
+          </a>
+        </div>
+
+        <div class="W_PreviewBlocks">
+          <div class="M_PreviewArea" data-demo="movement-orbit">
+            <div class="demo-orbit-path"></div>
+            <div class="demo-orbit-center"></div>
+            <div class="demo-orbit-arm">
+              <div class="demo-orbit-planet"></div>
+            </div>
+          </div>
+          <div class="M_PreviewArea">
+            <!-- <p class="caption-caps light">Hover + js</p> -->
+            <div class="eye-wrap">
+              <div class="eye" id="eyeLeft">
+                <div class="iris" id="irisLeft"><div class="pupil"></div></div>
+                <div class="eyelid" id="lidLeft"></div>
+              </div>
+              <div class="eye" id="eyeRight">
+                <div class="iris" id="irisRight"><div class="pupil"></div></div>
+                <div class="eyelid" id="lidRight"></div>
+              </div>
+            </div>
+          </div>
+          <div class="M_PreviewArea"></div>
+        </div>
+        <!-- need to fix the problem width the length of the content -->
+        <div class="M_Marquee">
+          <div class="fade-container"></div>
+          <ul class="W_MarqueeContent">
+            <span id="codetag" class="A_Tag code">keyframes</span>
+            <span id="codetag" class="A_Tag code">filter</span>
+            <span id="codetag" class="A_Tag code">transform</span>
+            <span id="codetag" class="A_Tag code">rotate</span>
+            <span id="codetag" class="A_Tag code">addEventListener</span>
+            <span id="codetag" class="A_Tag code">timeout</span>
+            <span id="codetag" class="A_Tag code">requestAnimationFrame</span>
+            <span id="codetag" class="A_Tag code">classList</span>
+          </ul>
+        </div>
+      </div>
+
+      <!-- LastBlock -->
+      <div class="S_ManyPosters">
+        <div class="O_SquaredBlock">
+          <div class="Q_HandleSquare lt"></div>
+          <div class="Q_HandleSquare rt"></div>
+          <div class="Q_HandleSquare rb"></div>
+          <div class="Q_HandleSquare lb"></div>
+
+          <div class="M_HeadingContainer">
+            <h2>Все плакаты, годы, опыт и&nbsp;приёмы в&nbsp;одном месте</h2>
+            <div class="M_ParagraphButton">
+              <p class="subtitle light">
+                Коллекция студенческих работ 2019&ndash;2025 годов
+                с&nbsp;фильтрацией по&nbsp;году, стилям и&nbsp;технологиям
+              </p>
             </div>
           </div>
 
-          <!-- need to fix the problem width the length of the content -->
-          <div class="M_Marquee">
-            <div class="fade-container"></div>
-            <ul class="W_MarqueeContent">
-              <span class="A_Tag code">keyframes</span>
-              <span class="A_Tag code">filter</span>
-              <span class="A_Tag code">transform</span>
-              <span class="A_Tag code">rotate</span>
-              <span class="A_Tag code">addEventListener</span>
-              <span class="A_Tag code">timeout</span>
-              <span class="A_Tag code">requestAnimationFrame</span>
-              <span class="A_Tag code">classList</span>
-            </ul>
-          </div>
+          <a href="modules.html" class="A_Button small"
+            >Заглянуть в каталог
+            <img src="./images/icons/Q_ArrowForward-24.svg" alt=""
+          /></a>
         </div>
-      </div>
-      <!-- LastBlock -->
-      <div class="S_ManyPosters">
-        <div class="M_HeadingContainer">
-          <h2>Библиотека из 220+ ярких веб-плакатов</h2>
-          <div class="M_ParagraphButton">
-            <p class="subtitle light">
-              Библиотека готовых CSS и JavaScript решений для тебя и твоего
-              проекта. Анимации, эффекты скролла, drag-and-drop.
-            </p>
-            <a href="modules.html" class="A_Button">Перейти в модули</a>
+        <!-- <div class="W_PosterThreeRows"> -->
+        <div class="C_PostersRow">
+          <div class="W_RowPostersAnim">
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster03.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster04.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster05.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster06.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster07.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster08.png" alt="" />
+            </div>
           </div>
         </div>
         <div class="C_PostersRow">
@@ -288,18 +368,50 @@
               <img src="images/posters/poster02.png" alt="" />
             </div>
             <div class="Q_PosterImage">
-              <img src="images/posters/poster02.png" alt="" />
+              <img src="images/posters/poster03.png" alt="" />
             </div>
             <div class="Q_PosterImage">
-              <img src="images/posters/poster02.png" alt="" />
+              <img src="images/posters/poster04.png" alt="" />
             </div>
             <div class="Q_PosterImage">
-              <img src="images/posters/poster02.png" alt="" />
+              <img src="images/posters/poster05.png" alt="" />
             </div>
             <div class="Q_PosterImage">
-              <img src="images/posters/poster02.png" alt="" />
+              <img src="images/posters/poster06.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster07.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster08.png" alt="" />
             </div>
           </div>
+        </div>
+        <div class="C_PostersRow">
+          <div class="W_RowPostersAnim">
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster02.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster03.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster04.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster05.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster06.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster07.png" alt="" />
+            </div>
+            <div class="Q_PosterImage">
+              <img src="images/posters/poster08.png" alt="" />
+            </div>
+          </div>
+          <!-- </div> -->
         </div>
       </div>
     </div>
